; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8366_smi.c___rtl8366_mdio_write_reg.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8366_smi.c___rtl8366_mdio_write_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtl8366_smi = type { %struct.mii_bus* }
%struct.mii_bus = type { i32, i32 (%struct.mii_bus*, i32, i32, i32)* }

@MDC_REALTEK_PHY_ADDR = common dso_local global i32 0, align 4
@MDC_MDIO_START_REG = common dso_local global i32 0, align 4
@MDC_MDIO_START_OP = common dso_local global i32 0, align 4
@MDC_MDIO_CTRL0_REG = common dso_local global i32 0, align 4
@MDC_MDIO_ADDR_OP = common dso_local global i32 0, align 4
@MDC_MDIO_ADDRESS_REG = common dso_local global i32 0, align 4
@MDC_MDIO_DATA_WRITE_REG = common dso_local global i32 0, align 4
@MDC_MDIO_CTRL1_REG = common dso_local global i32 0, align 4
@MDC_MDIO_WRITE_OP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtl8366_smi*, i32, i32)* @__rtl8366_mdio_write_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__rtl8366_mdio_write_reg(%struct.rtl8366_smi* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rtl8366_smi*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mii_bus*, align 8
  store %struct.rtl8366_smi* %0, %struct.rtl8366_smi** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @MDC_REALTEK_PHY_ADDR, align 4
  store i32 %9, i32* %7, align 4
  %10 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %4, align 8
  %11 = getelementptr inbounds %struct.rtl8366_smi, %struct.rtl8366_smi* %10, i32 0, i32 0
  %12 = load %struct.mii_bus*, %struct.mii_bus** %11, align 8
  store %struct.mii_bus* %12, %struct.mii_bus** %8, align 8
  %13 = call i32 (...) @in_interrupt()
  %14 = call i32 @BUG_ON(i32 %13)
  %15 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %16 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %15, i32 0, i32 0
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %19 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %18, i32 0, i32 1
  %20 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %19, align 8
  %21 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @MDC_MDIO_START_REG, align 4
  %24 = load i32, i32* @MDC_MDIO_START_OP, align 4
  %25 = call i32 %20(%struct.mii_bus* %21, i32 %22, i32 %23, i32 %24)
  %26 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %27 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %26, i32 0, i32 1
  %28 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %27, align 8
  %29 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* @MDC_MDIO_CTRL0_REG, align 4
  %32 = load i32, i32* @MDC_MDIO_ADDR_OP, align 4
  %33 = call i32 %28(%struct.mii_bus* %29, i32 %30, i32 %31, i32 %32)
  %34 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %35 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %34, i32 0, i32 1
  %36 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %35, align 8
  %37 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* @MDC_MDIO_START_REG, align 4
  %40 = load i32, i32* @MDC_MDIO_START_OP, align 4
  %41 = call i32 %36(%struct.mii_bus* %37, i32 %38, i32 %39, i32 %40)
  %42 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %43 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %42, i32 0, i32 1
  %44 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %43, align 8
  %45 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* @MDC_MDIO_ADDRESS_REG, align 4
  %48 = load i32, i32* %5, align 4
  %49 = call i32 %44(%struct.mii_bus* %45, i32 %46, i32 %47, i32 %48)
  %50 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %51 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %50, i32 0, i32 1
  %52 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %51, align 8
  %53 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %54 = load i32, i32* %7, align 4
  %55 = load i32, i32* @MDC_MDIO_START_REG, align 4
  %56 = load i32, i32* @MDC_MDIO_START_OP, align 4
  %57 = call i32 %52(%struct.mii_bus* %53, i32 %54, i32 %55, i32 %56)
  %58 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %59 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %58, i32 0, i32 1
  %60 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %59, align 8
  %61 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %62 = load i32, i32* %7, align 4
  %63 = load i32, i32* @MDC_MDIO_DATA_WRITE_REG, align 4
  %64 = load i32, i32* %6, align 4
  %65 = call i32 %60(%struct.mii_bus* %61, i32 %62, i32 %63, i32 %64)
  %66 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %67 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %66, i32 0, i32 1
  %68 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %67, align 8
  %69 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %70 = load i32, i32* %7, align 4
  %71 = load i32, i32* @MDC_MDIO_START_REG, align 4
  %72 = load i32, i32* @MDC_MDIO_START_OP, align 4
  %73 = call i32 %68(%struct.mii_bus* %69, i32 %70, i32 %71, i32 %72)
  %74 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %75 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %74, i32 0, i32 1
  %76 = load i32 (%struct.mii_bus*, i32, i32, i32)*, i32 (%struct.mii_bus*, i32, i32, i32)** %75, align 8
  %77 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %78 = load i32, i32* %7, align 4
  %79 = load i32, i32* @MDC_MDIO_CTRL1_REG, align 4
  %80 = load i32, i32* @MDC_MDIO_WRITE_OP, align 4
  %81 = call i32 %76(%struct.mii_bus* %77, i32 %78, i32 %79, i32 %80)
  %82 = load %struct.mii_bus*, %struct.mii_bus** %8, align 8
  %83 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %82, i32 0, i32 0
  %84 = call i32 @mutex_unlock(i32* %83)
  ret i32 0
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @in_interrupt(...) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
